fixed overflowing links issue on package info

--- a/src/stylesheets/package-info.css
+++ b/src/stylesheets/package-info.css
@@ -69,3 +69,7 @@ pre {
 .source-links {
     font-weight: bold;
 }
+
+.right-column {
+    word-wrap:break-word;
+}
